# android_native_app_imgui

./: .gitignore  .gitmodules  AndroidManifest.xml  CMakeLists.txt  CMakePresets.json  README.md  log.h  napp.cpp  native_app.cpp  native_service.cpp  native_service.h
cmake/: android.cmake
java/org/napp/: NativeActivity.java  NativeApp.java  NativeService.java
